--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.6",
+    "expo-app-loading": "^2.1.1",
     "expo-av": "~13.2.1",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
