Mudancas pq o Lucas e chato

--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "animu",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon_top.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash_top.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,12 +19,18 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive-icon-top.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.nessjs.animu"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "506eccd6-2206-459c-b70b-5b79515d5b49"
+      }
     }
   }
 }
