--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "expo": "~48.0.6",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.2.1",
+    "expo-cli": "^6.3.10",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.8",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
