--- a/package.json
+++ b/package.json
@@ -9,29 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/config-plugins": "^7.2.5",
+    "@expo/prebuild-config": "~6.2.4",
     "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.6",
+    "expo": "^49.0.5",
     "expo-app-loading": "^2.1.1",
-    "expo-av": "~13.2.1",
-    "expo-cli": "^6.3.10",
-    "expo-font": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo-av": "~13.4.1",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native": "0.72.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-text-ticker": "^1.14.0"
+  },
+   "resolutions": {
+    "@expo/config-plugins": "~6.0.0",
+    "@expo/prebuild-config": "~6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "@types/react-native": "^0.71.6",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
