--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "expo-av": "~13.4.1",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-text-ticker": "^1.14.0"
+    "react-native-text-ticker": "^1.14.0",
+    "react-native-webview": "13.2.2"
   },
-   "resolutions": {
+  "resolutions": {
     "@expo/config-plugins": "~6.0.0",
     "@expo/prebuild-config": "~6.0.0"
   },
