--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "animu",
+  "name": "Animu",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/config-plugins": "^7.2.5",
     "@expo/prebuild-config": "~6.2.4",
-    "@react-native-community/slider": "4.4.2",
+    "@notifee/react-native": "^7.8.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "^49.0.5",
@@ -23,11 +23,13 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-music-control": "^1.4.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.2.2",
+    "expo-splash-screen": "~0.20.4"
   },
   "resolutions": {
     "@expo/config-plugins": "~6.0.0",
