New player and mediasession and oscilocpe

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -56,3 +56,6 @@ expo.webp.animated=false
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 expo.jsEngine=hermes
+android.compileSdkVersion=33
+android.targetSdkVersion=33
+android.buildToolsVersion=33.0.0
