--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "Animu",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -11,25 +10,28 @@
   "dependencies": {
     "@expo/config-plugins": "^7.2.5",
     "@expo/prebuild-config": "~6.2.4",
-    "@notifee/react-native": "^7.8.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react-native-background-timer": "^2.0.0",
     "expo": "^49.0.5",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.4.1",
+    "expo-background-fetch": "~11.3.0",
+    "expo-build-properties": "~0.8.3",
     "expo-font": "~11.4.0",
+    "expo-splash-screen": "0.20.4",
     "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "~12.3.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-music-control": "^1.4.1",
+    "react-native-background-timer": "^2.4.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-webview": "13.2.2",
-    "expo-splash-screen": "~0.20.4"
+    "react-native-track-player": "^3.2.0",
+    "react-native-volume-manager": "^1.10.0",
+    "react-native-webview": "13.2.2"
   },
   "resolutions": {
     "@expo/config-plugins": "~6.0.0",
