--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~11.4.0",
     "expo-splash-screen": "0.20.4",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
