Milestone 2.0 Slug-FIX

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Rádio Animu",
-    "slug": "Rádio Animu",
+    "slug": "animu",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon_top.png",
