--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-native-svg": "13.9.0",
     "react-native-text-ticker": "^1.14.0",
     "react-native-track-player": "^3.2.0",
-    "react-native-volume-manager": "^1.10.0",
-    "react-native-webview": "13.2.2"
+    "react-native-volume-manager": "^1.10.0"
   },
   "resolutions": {
     "@expo/config-plugins": "~6.0.0",
