--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-background-timer": "^2.4.1",
-    "react-native-marquee": "^0.5.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-track-player": "^3.2.0",
+    "react-native-track-player": "4.0.0-rc05",
     "react-native-volume-manager": "^1.10.0"
   },
   "resolutions": {
