--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/config-plugins": "^7.2.5",
     "@expo/prebuild-config": "~6.2.4",
+    "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
@@ -24,6 +25,8 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-background-timer": "^2.4.1",
+    "react-native-gesture-handler": "2.14.0",
+    "react-native-reanimated": "3.6.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
