--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Animu",
-  "version": "1.0.0",
+  "version": "1.1.0 (beta)",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
