--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "expo": "^49.0.5",
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.8.3",
+    "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
-    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-background-timer": "^2.4.1",
@@ -31,8 +31,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-track-player": "3.2.0-6d22c10da7fb04d6b30cc9628c4acabe388d7f92",
-    "react-native-volume-manager": "^1.10.0"
+    "react-native-track-player": "3.2.0-6d22c10da7fb04d6b30cc9628c4acabe388d7f92"
   },
   "resolutions": {
     "@expo/config-plugins": "~6.0.0",
