--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/config-plugins": "^7.2.5",
     "@expo/prebuild-config": "~6.2.4",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
