Add expo-auth-session and expo-crypto dependencies*** ***Update API URLs*** ***Update default cover image in UltimasTocadas and UltimasPedidas screens*** ***Add Discord login option in CustomDrawerContent

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react-native-background-timer": "^2.0.0",
     "expo": "^49.0.5",
     "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "~5.0.2",
     "expo-build-properties": "~0.8.3",
+    "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "0.20.4",
