--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
     "expo-splash-screen": "0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
