--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "@expo/config-plugins": "^7.2.5",
     "@expo/prebuild-config": "~6.2.4",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
     "expo": "^49.0.5",
     "expo-app-loading": "^2.1.1",
-    "expo-auth-session": "~5.0.2",
     "expo-build-properties": "~0.8.3",
-    "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
