--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "animu",
   "version": "1.2.0 (beta)",
+  "author": "Ness.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -28,12 +29,14 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-background-timer": "^2.4.1",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "2.14.0",
     "react-native-reanimated": "3.6.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-text-ticker": "^1.14.0",
+    "react-native-toggle-input": "^1.0.12",
     "react-native-track-player": "3.2.0-6d22c10da7fb04d6b30cc9628c4acabe388d7f92"
   },
   "resolutions": {
