--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
+    "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
     "expo-splash-screen": "0.20.4",
     "expo-status-bar": "~1.6.0",
