--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
+    "axios": "^1.6.7",
     "expo": "^49.0.5",
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.8.3",
