--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.13",
+    "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
