--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config-plugins": "^7.2.5",
-    "@expo/prebuild-config": "~6.2.4",
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "~8.0.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
-    "expo": "^49.0.5",
+    "expo": "^52.0.30",
     "expo-app-loading": "^2.1.1",
-    "expo-build-properties": "~0.8.3",
-    "expo-dev-client": "~2.4.13",
-    "expo-device": "~5.4.0",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.5",
-    "expo-linking": "~5.0.2",
-    "expo-splash-screen": "0.20.4",
-    "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "~12.3.2",
-    "react": "18.2.0",
-    "react-native": "0.72.3",
+    "expo-build-properties": "~0.13.2",
+    "expo-dev-client": "~5.0.11",
+    "expo-device": "~7.0.2",
+    "expo-font": "~13.0.3",
+    "expo-image": "~2.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-background-timer": "^2.4.1",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "2.14.0",
-    "react-native-reanimated": "3.6.2",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-text-ticker": "^1.14.0",
     "react-native-toggle-input": "^1.0.12",
     "react-native-track-player": "3.2.0-6d22c10da7fb04d6b30cc9628c4acabe388d7f92"
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.3.12",
     "typescript": "^5.1.3"
   },
   "private": true
