Refactor music request handling: update DTOs, implement submission logic, and enhance API integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "jira-plugin.workingProject": "",
-  "cSpell.words": ["rawtitle", "requestable"]
+  "cSpell.words": ["pedirquatro", "rawtitle", "requestable"]
 }
