--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-svg": "15.8.0",
     "react-native-text-ticker": "^1.14.0",
     "react-native-toggle-input": "^1.0.12",
-    "react-native-track-player": "^4.1.1"
+    "react-native-track-player": "^4.1.1",
+    "zod": "^3.24.2"
   },
   "resolutions": {
     "@expo/config-plugins": "~9.0.0",
