Refactor code structure for improved readability and maintainability

--- a/app.json
+++ b/app.json
@@ -16,7 +16,12 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nessjs.animu"
+      "bundleIdentifier": "com.nessjs.animu",
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "processing"
+        ]
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -33,13 +38,15 @@
         "expo-build-properties",
         {
           "android": {
-            "compileSdkVersion": 34,
-            "targetSdkVersion": 34,
-            "buildToolsVersion": "34.0.0"
+            "compileSdkVersion": 35,
+            "targetSdkVersion": 35,
+            "buildToolsVersion": "35.0.0"
           }
         }
       ],
-      "expo-font"
+      "expo-font",
+      "expo-asset",
+      "expo-background-task"
     ],
     "extra": {
       "eas": {
