--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config-plugins": "~9.0.0",
     "@expo/prebuild-config": "~8.0.0",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "~14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
     "axios": "^1.7.9",
-    "expo": "^52.0.30",
+    "expo": "~52.0.0",
+    "expo-asset": "~11.0.5",
+    "expo-background-task": "~0.1.4",
     "expo-build-properties": "~0.13.2",
     "expo-dev-client": "~5.0.11",
     "expo-device": "~7.0.2",
     "expo-font": "~13.0.3",
     "expo-image": "~2.0.4",
     "expo-linking": "~7.0.5",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.6",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-background-timer": "^2.4.1",
+    "react-native": "0.76.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
@@ -49,7 +50,21 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
+    "babel-preset-expo": "~12.0.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-track-player"
+        ],
+        "listUnknownPackages": false
+      }
+    },
+    "install": {
+      "exclude": []
+    }
+  }
 }
