--- a/package.json
+++ b/package.json
@@ -9,48 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/prebuild-config": "~8.0.0",
-    "@expo/vector-icons": "~14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.0",
-    "expo-asset": "~11.0.5",
-    "expo-background-task": "~0.1.4",
-    "expo-build-properties": "~0.13.2",
-    "expo-dev-client": "~5.0.11",
-    "expo-device": "~7.0.2",
-    "expo-font": "~13.0.4",
-    "expo-image": "~2.0.4",
-    "expo-linking": "~7.0.5",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-task-manager": "~12.0.6",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "expo": "^54.0.11",
+    "expo-asset": "~12.0.9",
+    "expo-background-task": "~1.0.8",
+    "expo-build-properties": "~1.0.9",
+    "expo-dev-client": "~6.0.13",
+    "expo-device": "~8.0.9",
+    "expo-font": "~14.0.8",
+    "expo-image": "~3.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "~14.0.7",
+    "expo-web-browser": "~15.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-text-ticker": "^1.14.0",
     "react-native-toggle-input": "^1.0.12",
     "react-native-track-player": "^4.1.1",
+    "react-native-worklets": "0.5.1",
     "zod": "^3.24.2"
-  },
-  "resolutions": {
-    "@expo/config-plugins": "~9.0.0",
-    "@expo/prebuild-config": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "babel-preset-expo": "~12.0.0",
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "~54.0.0",
     "typescript": "^5.1.3"
   },
   "private": true,
