chore: update dependencies to improve compatibility and performance
- Downgraded @expo/vector-icons to version 14.1.0
- Downgraded @react-native-async-storage/async-storage to version 2.1.2
- Downgraded expo to version 53.0.23
- Downgraded expo-asset to version 11.1.7
- Downgraded expo-background-task to version 0.2.8
- Downgraded expo-build-properties to version 0.14.8
- Downgraded expo-dev-client to version 5.2.4
- Downgraded expo-device to version 7.1.4
- Downgraded expo-font to version 13.3.2
- Downgraded expo-image to version 2.4.0
- Downgraded expo-linking to version 7.1.7
- Downgraded expo-splash-screen to version 0.30.10
- Downgraded expo-status-bar to version 2.2.3
- Added expo-system-ui at version 5.0.11
- Downgraded react to version 19.0.0
- Downgraded react-native to version 0.79.5
- Downgraded react-native-gesture-handler to version 2.24.0
- Downgraded react-native-reanimated to version 3.17.4
- Downgraded react-native-safe-area-context to version 5.4.0
- Downgraded react-native-screens to version 4.11.1
- Downgraded react-native-svg to version 15.11.2
- Updated react-native-track-player to version 4.1.2
- Downgraded @types/react to version 19.0.10
- Downgraded babel-preset-expo to version 13.0.0
- Downgraded typescript to version 5.8.3

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.2.1",
     "orientation": "portrait",
     "icon": "./assets/icon_top.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash_top.png",
       "backgroundColor": "#270051"
@@ -29,7 +29,9 @@
         "foregroundImage": "./assets/adaptive-icon-top.png",
         "backgroundColor": "#270051"
       },
-      "package": "com.nessjs.animu"
+      "package": "com.nessjs.animu",
+      "versionCode": 2,
+      "edgeToEdgeEnabled": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -57,7 +59,8 @@
         }
       ],
       "expo-asset",
-      "expo-background-task"
+      "expo-background-task",
+      "expo-web-browser"
     ],
     "extra": {
       "eas": {
