--- a/package.json
+++ b/package.json
@@ -9,45 +9,46 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
     "axios": "^1.7.9",
-    "expo": "^54.0.11",
-    "expo-asset": "~12.0.9",
-    "expo-background-task": "~1.0.8",
-    "expo-build-properties": "~1.0.9",
-    "expo-dev-client": "~6.0.13",
-    "expo-device": "~8.0.9",
-    "expo-font": "~14.0.8",
-    "expo-image": "~3.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-task-manager": "~14.0.7",
-    "expo-web-browser": "~15.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
+    "expo": "^53.0.23",
+    "expo-asset": "~11.1.7",
+    "expo-background-task": "~0.2.8",
+    "expo-build-properties": "~0.14.8",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
+    "expo-font": "~13.3.2",
+    "expo-image": "~2.4.0",
+    "expo-linking": "~7.1.7",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.11",
+    "expo-task-manager": "~13.1.6",
+    "expo-web-browser": "~14.2.0",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-text-ticker": "^1.14.0",
     "react-native-toggle-input": "^1.0.12",
-    "react-native-track-player": "^4.1.1",
+    "react-native-track-player": "^4.1.2",
     "react-native-worklets": "0.5.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~19.1.10",
-    "babel-preset-expo": "~54.0.0",
-    "typescript": "^5.1.3"
+    "@types/react": "~19.0.10",
+    "babel-preset-expo": "~13.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true,
   "expo": {
