--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "animu",
-  "version": "1.2.1",
+  "version": "2.0",
   "author": "Ness.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -41,13 +42,13 @@
     "react-native-text-ticker": "^1.14.0",
     "react-native-toggle-input": "^1.0.12",
     "react-native-track-player": "^4.1.2",
-    "react-native-worklets": "0.5.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
     "babel-preset-expo": "~13.0.0",
+    "patch-package": "^8.0.0",
     "typescript": "~5.8.3"
   },
   "private": true,
