chore: update package version to 2.0.1 and adjust dependencies
- Bump version from 2.0 to 2.0.1 in package.json
- Change expo dependency version from ^53.0.23 to ~53.0.23
- Downgrade react-native-track-player from ^4.1.2 to ^4.1.1
- Add resolutions for @expo/config-plugins, @expo/prebuild-config, and @types/react
- Remove postinstall script for patch-package

fix: comment out unused Text component in DiscordProfile

- Commented out the Text component displaying listening time in DiscordProfile component

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "animu",
-  "version": "2.0",
+  "version": "2.0.1",
   "author": "Ness.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
-    "postinstall": "patch-package"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -17,7 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-background-timer": "^2.0.0",
     "axios": "^1.7.9",
-    "expo": "^53.0.23",
+    "expo": "~53.0.23",
     "expo-asset": "~11.1.7",
     "expo-background-task": "~0.2.8",
     "expo-build-properties": "~0.14.8",
@@ -28,7 +27,6 @@
     "expo-linking": "~7.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.11",
     "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
@@ -41,14 +39,18 @@
     "react-native-svg": "15.11.2",
     "react-native-text-ticker": "^1.14.0",
     "react-native-toggle-input": "^1.0.12",
-    "react-native-track-player": "^4.1.2",
+    "react-native-track-player": "^4.1.1",
     "zod": "^3.24.2"
+  },
+  "resolutions": {
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "~9.0.0",
+    "@types/react": "~19.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
     "babel-preset-expo": "~13.0.0",
-    "patch-package": "^8.0.0",
     "typescript": "~5.8.3"
   },
   "private": true,
